--- a/src/views/inputFields/image.jade
+++ b/src/views/inputFields/image.jade
@@ -1,4 +1,4 @@
-label {{field.text | translate}}
+label {{field.title | translate}}
 div
     div
         input(ng-if="!readOnly(field)" type="file" fileread="object[field.property]")
