--- a/src/views/inputFields/select.jade
+++ b/src/views/inputFields/select.jade
@@ -1,4 +1,4 @@
-label {{field.text | translate}}
+label {{field.title | translate}}
 select.form-control(ng-model="object[field.property]")
     option(
         ng-repeat="select in field.selectValues"
