--- a/src/views/webDialog.jade
+++ b/src/views/webDialog.jade
@@ -9,4 +9,4 @@ div(ng-form="form")
    div(ng-if="changesApplied")
       .bg-success.dialog-notification(ng-bind="submitSuccess")
       md-content(layout-padding)
-         md-button.md-raised(ng-click="openForm(form)" ng-bind="'Main.OpenForm' | translate" aria-label="Open")
+         md-button.md-raised(ng-click="openForm(form)" ng-bind="'Open Form' | translate" aria-label="Open")
