--- a/src/views/inputFields/checkBox.jade
+++ b/src/views/inputFields/checkBox.jade
@@ -1,1 +1,1 @@
-md-checkbox(name="{{field.property}}" ng-model="object[field.property]" ng-disabled="readOnly(field)") {{field.text | translate}}
+md-checkbox(name="{{field.property}}" ng-model="object[field.property]" ng-disabled="readOnly(field)") {{field.title | translate}}
