--- a/src/views/inputFields/multiSelect.jade
+++ b/src/views/inputFields/multiSelect.jade
@@ -1,2 +1,2 @@
-label {{field.text | translate}}
+label {{field.title | translate}}
 select(ng-model="object[field.property]" multiple ng-options="item.value as item.text for item in field.selectValues")
