--- a/src/views/inputFields/multilineText.jade
+++ b/src/views/inputFields/multilineText.jade
@@ -1,2 +1,2 @@
-label {{field.text | translate}}
+label {{field.title | translate}}
 textarea(ng-model="object[field.property]" ng-readonly="readOnly(field)")
