--- a/src/views/inputFields/number.jade
+++ b/src/views/inputFields/number.jade
@@ -1,2 +1,2 @@
-label {{field.text | translate}}
+label {{field.title | translate}}
 input(type="number" ng-model="object[field.property]" ng-readonly="readOnly(field)" ng-required="required")
