--- a/src/views/fileRead.jade
+++ b/src/views/fileRead.jade
@@ -1,4 +1,7 @@
-input(type="file" style="display: none")
-md-button(ng-click="chooseFile()") {{ 'Main.ChooseFile' | translate }}
-md-button(ng-click="clear()") {{ 'Main.ClearFile' | translate }}
+input(
+    type="file"
+    style="display: none"
+)
+md-button(ng-click="chooseFile()") {{ configuration.chooseFileMessage | translate }}
+md-button(ng-click="clear()" ng-show="valueSet") {{ configuration.clearFileMessage | translate }}
 span {{comment}}
