Updated build process

--- a/test/views/index.jade
+++ b/test/views/index.jade
@@ -13,7 +13,7 @@ html(lang='en')
 
             script(type="text/javascript", src="/build/test/app/paths.js")
             script(type="text/javascript", src="/bower_components/requirejs/require.js")
-            script(type="text/javascript", src="/release/lm-webforms.modular.js")
+            script(type="text/javascript", src="/release/lm-webforms.amd.js")
 
             script(type="text/javascript").
                 require(['build/test/app/TestApp', 'angular', 'angular.material', 'build/lm-webforms'], function(initializeApp) {
