--- a/test/views/index.jade
+++ b/test/views/index.jade
@@ -3,6 +3,7 @@ html(lang='en')
     head
         title Test Page
         link(href="/bower_components/angular-material/angular-material.css", rel="stylesheet", type="text/css")
+        link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
     body(ng-controller="test")
         md-content
             #returned-object(ng-bind="returnedObject")
