Fixed file and multifile design

--- a/src/views/_webFormTemplateBody.jade
+++ b/src/views/_webFormTemplateBody.jade
@@ -1,7 +1,8 @@
 ﻿md-content(layout-padding layout="column")
 
     style.
-        md-input-container.inputfield-file label {
+        md-input-container.inputfield-file label,
+        md-input-container.inputfield-file_list label {
             flex: none;
             -webkit-flex: none;
             transform: none !important;
