--- a/src/views/fileRead.jade
+++ b/src/views/fileRead.jade
@@ -3,6 +3,8 @@ input(
     style="display: none"
 )
 
-md-button(ng-click="chooseFile()") {{ configuration.chooseFileMessage | translate }}
-md-button(ng-click="clear()" ng-show="valueSet") {{ configuration.clearFileMessage | translate }}
+md-button(ng-click="chooseFile()")
+    md-icon attach_file
+md-button(ng-click="clear()" ng-show="valueSet")
+    md-icon clear
 span {{comment}}
