--- a/src/views/inputFields/fileList.jade
+++ b/src/views/inputFields/fileList.jade
@@ -2,14 +2,14 @@ label {{field.title | translate}}
 
 style.
     md-input-container multi-file-read.md-input {
-        border-width: 0;
+        border-width: 1px !important;
     }
     md-input-container multi-file-read.md-input.ng-invalid.ng-dirty {
-        border-width: 2px;
+        border-width: 1px;
         border-style: solid;
     }
     md-input-container.md-input-focused multi-file-read.md-input {
-        border-width: 2px;
+        border-width: 1px;
         border-style: solid;
     }
 
