Fixed label, typeahead, file, validation, select, multiselect; field repeat made common; removed modular typescript code

--- a/src/views/fileRead.jade
+++ b/src/views/fileRead.jade
@@ -1,6 +1,6 @@
 input(
     type="file"
-    style="display: none"
+    style="opacity: 0; height: 0; width: 0; display: inline"
 )
 
 md-button(ng-click="chooseFile()")
