--- a/src/views/inputFields/label.jade
+++ b/src/views/inputFields/label.jade
@@ -1,2 +1,2 @@
 label {{field.title | translate}}
-span(ng-bind="object[field.property]")
+.md-input(ng-bind="object[field.property]" style="position: relative; top: 1.5em;")
