--- a/src/views/inputFields/password.jade
+++ b/src/views/inputFields/password.jade
@@ -7,4 +7,6 @@ input(
     ng-required="field.required"
     ng-minlength="field.minLength"
     ng-maxlength="field.maxLength"
+    validate-equals="{{field.reference}}"
+    reference="{{field.reference === null || object[field.reference]}}"
 )
