--- a/src/views/inputFields/select.jade
+++ b/src/views/inputFields/select.jade
@@ -1,8 +1,23 @@
-label {{field.title | translate}}
-select.form-control(ng-model="object[field.property]")
-    option(
-        ng-repeat="select in field.selectValues"
-        value="{{select.value}}"
-        ng-bind="select.text"
-        ng-selected="fieldValueSelected(model, field, select)"
+md-select(
+    name="{0}"
+    ng-model="object[field.property]"
+    ng-readonly="readOnly(field) || fieldDisabled"
+    placeholder="{{ field.title | translate }}"
+    ng-disabled="fieldDisabled"
+    ng-required="field.required"
+    validate-equals="{{field.reference}}"
+    reference="{{field.reference === null || object[field.reference]}}"
+)
+    md-optgroup(
+        ng-repeat="group in field.itemsArray | filter: { isGroup: true }"
+        label="{{group.text}}"
     )
+        md-option(
+            ng-repeat="item in group.items"
+            ng-value="item.key"
+        ) {{ item.text }}
+
+    md-option(
+        ng-repeat="item in field.itemsArray | filter: { isGroup: false }"
+        value="{{item.key}}"
+    ) {{ item.text }}
