--- a/src/views/inputFields/text.jade
+++ b/src/views/inputFields/text.jade
@@ -3,8 +3,11 @@ input(
     type="text"
     name="{{field.property}}"
     ng-model="object[field.property]"
-    ng-readonly="readOnly(field)"
+    ng-readonly="readOnly(field) || fieldDisabled"
+    ng-disabled="fieldDisabled"
     ng-required="field.required"
     ng-minlength="field.minLength"
     ng-maxlength="field.maxLength"
+    validate-equals="{{field.reference}}"
+    reference="{{field.reference === null || object[field.reference]}}"
 )
