--- a/src/views/_webFormTemplateBody.jade
+++ b/src/views/_webFormTemplateBody.jade
@@ -8,10 +8,10 @@
             transform: none !important;
         }
 
-    div(ng-repeat="field in fields | orderBy: 'position'")
-        input-field(field="field" object="object" form="form" ng-if="fieldVisible(field) && !field.isGroup")
+    div(ng-repeat="field in fields | orderBy: 'position'" class="{{'field-' + field.type + ' ' + 'field-list'}}")
+        input-field(field="field" object="object" form="form" ng-if="fieldVisible(field) && !field.isGroup" field-disabled="isApplying")
         div(ng-if="field.isGroup" layout="row" layout-sm="column")
-            input-field(ng-repeat="child in field.children" field="child" object="object" form="form" ng-if="fieldVisible(child)" flex="")
+            input-field(ng-repeat="child in field.children" field="child" object="object" form="form" ng-if="fieldVisible(child)" flex="" field-disabled="isApplying")
 
     div(ng-if="submitWithCaptcha" captcha="recaptchaPublicKey")
 
