--- a/test/views/index.jade
+++ b/test/views/index.jade
@@ -14,9 +14,8 @@ html(lang='en')
 
             script(type="text/javascript", src="/build/test/app/paths.js")
             script(type="text/javascript", src="/bower_components/requirejs/require.js")
-            script(type="text/javascript", src="/release/lm-webforms.js")
 
             script(type="text/javascript").
-                require(['build/test/app/TestApp', 'angular', 'angular.material', 'build/lm-webforms'], function(initializeApp) {
+                require(['build/test/app/TestApp', 'angular', 'angular_material', 'release/lm-webforms'], function(initializeApp) {
                     initializeApp();
                 });
