Fixed image loader

--- a/src/views/_webFormTemplateBody.jade
+++ b/src/views/_webFormTemplateBody.jade
@@ -2,6 +2,7 @@
 
     style.
         md-input-container.inputfield-file label,
+        md-input-container.inputfield-image label,
         md-input-container.inputfield-file_list label {
             flex: none;
             -webkit-flex: none;
