--- a/src/views/inputFields/image.jade
+++ b/src/views/inputFields/image.jade
@@ -1,6 +1,22 @@
 label {{field.title | translate}}
-div
-    div
-        input(ng-if="!readOnly(field)" type="file" fileread="object[field.property]")
-    div(style="margin-top: 1em;")
-        img(ng-if="object[field.property] != null" ng-src="/Image/Thumbnail/{{object[field.property]}}")
+style.
+    md-input-container file-read.md-input {
+        border-width: 1px !important;
+    }
+
+    md-input-container file-read.md-input.ng-invalid.ng-dirty {
+        border-width: 1px;
+        border-style: solid;
+    }
+
+    md-input-container.md-input-focused file-read.md-input {
+        border-width: 1px;
+        border-style: solid;
+    }
+file-read.md-input(
+    ng-model="object[field.property]"
+    style="height: auto"
+    ng-required="field.required"
+    name="{{field.property}}"
+    show-image="true"
+)
