Added recaptcha v1 support; updated release file header and footer and requirejs constants; updated examples

--- a/src/views/_webFormTemplateBody.jade
+++ b/src/views/_webFormTemplateBody.jade
@@ -14,7 +14,7 @@
         div(ng-if="field.isGroup" layout="row" layout-sm="column")
             input-field(ng-repeat="child in field.children | orderBy: 'position'" field="child" object="object" form="form" ng-if="fieldVisible(child)" flex="" field-disabled="isApplying")
 
-    div(ng-if="submitWithCaptcha" captcha="recaptchaPublicKey")
+    div(ng-if="submitWithCaptcha" captcha)
 
     .bg-danger.dialog-notification(ng-if="submitError.length > 0")
         span.glyphicon.glyphicon-exclamation-sign
